# SuperHack

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  requirements.txt  run_interactive_agent.py  superops_corrected_format.txt
docs/: AGENT_EXECUTION_REPORT.md  ALERTS_TOOL_IMPLEMENTATION_SUMMARY.md  BACKWARD_COMPATIBILITY_CLEANUP_SUMMARY.md  COMPLETE_CONTRACT_TOOLS_SUMMARY.md  COMPLETE_STRANDS_MIGRATION_SUMMARY.md  COMPREHENSIVE_ENDPOINT_TEST_REPORT.md  CORE_USER_STORIES_SUMMARY.md  CREATE_CLIENT_USER_TOOL_SUMMARY.md  CREATE_CONTRACT_TOOL_SUMMARY.md  CREATE_TECHNICIAN_TOOL_SUMMARY.md  FINAL_AGENT_TOOL_API_REPORT.md  FINAL_COMPREHENSIVE_AGENT_REPORT.md  FINAL_COMPREHENSIVE_SYSTEM_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_SUCCESS_REPORT.md  FINAL_UPDATED_SYSTEM_REPORT.md  IMPLEMENTATION_SUMMARY.md  INVOICE_TOOL_IMPLEMENTATION_SUMMARY.md  IT_TECHNICIAN_AGENT_ARCHITECTURE.md  KB_ARTICLE_TOOL_IMPLEMENTATION_SUMMARY.md  MEM0_INTEGRATION_VERIFICATION_SUMMARY.md  MEMO_INTEGRATION_SUMMARY.md  QUOTE_DETAILED_DISPLAY_SUMMARY.md  QUOTE_TOOL_IMPLEMENTATION_SUMMARY.md  README.md  SLA_TOOLS_README.md  STRANDS_TOOLS_MIGRATION.md  SUBAGENTS_README.md  SUPEROPS_API_TEST_RESULTS.md  SUPEROPS_INTEGRATION_GUIDE.md  TASK_CREATION_API_DOCUMENTATION.md  TASK_CREATION_IMPLEMENTATION_SUMMARY.md  TOOL_INTEGRATION_STATUS.md  TRACK_TIME_USAGE_EXAMPLE.md  USER_CREATION_TOOLS_SUCCESS.md  WORK_STATUS_TOOL_SUMMARY.md  data_model_strategy.md
src/: __init__.py  interactive_agent.py  main.py
test_scripts/: agent_capabilities_demo.py  agent_execution_demo.py  clean_agent_demo.py  comprehensive_agent_demo.py  comprehensive_endpoint_test.py  demo_create_task_interactive.py  enhanced_comprehensive_demo.py  final_endpoint_test.py  session_cleanup_test.py  (+18 more)
(+189 files in other folders)
